<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mostafa.aman.about"
    android:background="#eceff1"
    tools:showIn="@layout/activity_about"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/about_content_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:text="دليل الرعاية الصحية عام   2016"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="97dp"
                android:layout_height="95dp"
                android:id="@+id/facebook"
                android:background="@drawable/facebook_d"/>
            <Button
                android:layout_width="97dp"
                android:layout_height="95dp"
                android:id="@+id/website"
                android:background="@drawable/visitwebsite"/>
        </LinearLayout>


        <!--<TextView-->
      <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="22sp"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="facebbok/eng.synd "/>-->
        <!--<TextView-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="website :http://www.eea-giza.com"/>-->


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/about_tilte_developer"/>
<LinearLayout
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="left"
    android:layout_gravity="left"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2.25"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:text="@string/about_author_email"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/about_author" />

</LinearLayout>

        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="horizontal"
    android:layout_margin="4dp"
    android:gravity="left"
    android:layout_gravity="left">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2.25"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:text="@string/about_developer_email"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/about_developer"
  />

</LinearLayout>
    </LinearLayout>
</LinearLayout>
